Adding complete url

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ location: "Orlando, Florida"
 email: sanjay.mnambiar@gmail.com
 baseurl: ""
 
-url: "sanjay-nambiar.github.io" # replace by your site's url
+url: "https://sanjay-nambiar.github.io" # replace by your site's url
 twitter_username: mr_snambiar
 github_username:  sanjay-nambiar
 author: "Sanjay Nambiar"
